# Real-time-visual-defect-detection

./: .gitignore  Dockerfile  METHOD.md  PLAN job A_analize val_defect.md  PLAN.md  README.md  main.py  pyproject.toml  run_patchcore_hpc.sh  runtime_main.py  setup_env.sh
.claude/: settings.local.json
data/: .dataset_path_history.json
memory/: MEMORY.md  project_compute_strategy.md  project_default_epochs.md  reference_realiad_layout.md  user_profile.md
notebooks/: analyze jobA.ipynb  analyze jobB.ipynb  analyze jobC.ipynb  benchmark_graphs and tables.ipynb  run_jobA_colab.ipynb  run_jobA_trained_colab.ipynb  run_jobA_val_defect_colab.ipynb  run_jobB_colab.ipynb  run_jobB_trained_colab.ipynb  run_jobB_val_defect_colab.ipynb
scripts/: compare_val_defect.py  main.py  run_jobA_colab.sh  run_jobA_trained_colab.sh  run_jobA_val_defect_colab.sh  run_jobA_val_defect_rerun_colab.sh  run_jobB_colab.sh  run_jobB_trained_colab.sh  run_jobB_val_defect_colab.sh  unzip_realiad.sh
src/benchmark_AD/: README_benchmark.md  data.py  default.yaml  evaluation.py  models.py  pipeline.py
src/benchmark_AD.egg-info/: PKG-INFO
src/corruptions/: README_corruptions.md  __init__.py  corruption_registry.py  test_corruption.py  test_pipeline_benchmark.py
src/real_time_visual_defect_detection/: __init__.py  core.py
src/real_time_visual_defect_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/streaming_input/: README_streaming.md  __init__.py  app.py  artifacts.py  contracts.py  (+6 more)
tests/: test_loader.py  test_pipeline_benchmark.py  test_streaming_input.py
(+24 files in other folders)
